--- a/MHW Randomizer/Controls/Armour.xaml
+++ b/MHW Randomizer/Controls/Armour.xaml
@@ -28,16 +28,16 @@
                     <StackPanel Margin="0 5">
                         <!-- Armour -->
                         <CheckBox Content="Shuffle Armour Recipes"
-                                  IsChecked="{Binding ShuffleArmourRecipes, Source={x:Static local:IoC.Settings}}"
+                                  IsChecked="{Binding ShuffleArmourRecipes, Source={x:Static local:ViewModels.Settings}}"
                                   Margin="5, 4"
                                   Unchecked="ShuffleRecipes_Unchecked"
                                   ToolTip="Shuffles the recipies and makes them all avaliable at the start of the game &#x0a;(low rank recipes shuffle with low rank, high with high, and master with master. Doesn't shuffle between different types of armour pieces eg. head, chest, waist, etc)"
                                   ToolTipService.ShowDuration="10000"/>
                         <CheckBox Content="Shuffle Iron Ore Recipes"
-                                  IsChecked="{Binding ShuffleIronOre, Source={x:Static local:IoC.Settings}}"
+                                  IsChecked="{Binding ShuffleIronOre, Source={x:Static local:ViewModels.Settings}}"
                                   Margin="12, 4"
                                   x:Name="IronCB"
-                                  IsEnabled="{Binding ShuffleArmourRecipes, Source={x:Static local:IoC.Settings}}"
+                                  IsEnabled="{Binding ShuffleArmourRecipes, Source={x:Static local:ViewModels.Settings}}"
                                   ToolTip="Shuffles the first two low rank armour recipes that have iron (could make some later low rank armour easier to get)"/>
                     </StackPanel>
                 </Border>
@@ -57,7 +57,7 @@
                         Margin="5">
                     <StackPanel Margin="0 5">
                             <CheckBox Content="Shuffle Charms"
-                                      IsChecked="{Binding ShuffleCharms, Source={x:Static local:IoC.Settings}}"
+                                      IsChecked="{Binding ShuffleCharms, Source={x:Static local:ViewModels.Settings}}"
                                       Margin="5 4"
                                       ToolTip="Shuffles the charms recipies"
                                       VerticalAlignment="Top"/>
@@ -80,7 +80,7 @@
                     Margin="5">
                 <StackPanel Margin="0 5">
                     <CheckBox Content="Shuffle Palico Armour Recipes"
-                              IsChecked="{Binding ShufflePalicoArmour, Source={x:Static local:IoC.Settings}}"
+                              IsChecked="{Binding ShufflePalicoArmour, Source={x:Static local:ViewModels.Settings}}"
                               Margin="5 4"
                               ToolTip="Shuffles palico armour recipies and makes them all avaliable at the start of the game &#x0a;(low rank recipes shuffle with low rank, high with high, and master with master. Doesn't shuffle between different types of armour pieces eg. head, chest)"
                               ToolTipService.ShowDuration="10000"/>
@@ -109,23 +109,23 @@
                     Margin="5">
                     <StackPanel Margin="0 5">
                         <CheckBox Content="Random Armour Skills"
-                                          IsChecked="{Binding RandomArmourSkill, Source={x:Static local:IoC.Settings}}"
+                                          IsChecked="{Binding RandomArmourSkill, Source={x:Static local:ViewModels.Settings}}"
                                           Margin="5, 4"
                                           ToolTip="Randomizes armour to have random skills &#x0a;(Doesn't add more skill or add skills to armour that didn't have them)"/>
                         <CheckBox Content="Random Armour Skill Levels"
-                                      IsChecked="{Binding RandomArmourSkillLevels, Source={x:Static local:IoC.Settings}}"
+                                      IsChecked="{Binding RandomArmourSkillLevels, Source={x:Static local:ViewModels.Settings}}"
                                       Margin="5, 4"
                                       ToolTip="Randomizes armour to have random skill levels &#x0a;(Skill level has bias for lower numbers)"/>
 
                         <CheckBox Content="Shuffle Armour Set Bonus"
-                                      IsChecked="{Binding ShuffleArmourSetBonus, Source={x:Static local:IoC.Settings}}"
+                                      IsChecked="{Binding ShuffleArmourSetBonus, Source={x:Static local:ViewModels.Settings}}"
                                       Margin="5 10 5 4"
                                       ToolTip="Shuffles armour set bonuses &#x0a;(Shuffles each rank seperately, armour that didn't previous have a bonus won't be shuffled to have one)"/>
                         <CheckBox Content="Shuffle Bonus Between Ranks"
-                                      IsChecked="{Binding NonRankSpecificSetBonusShuffle, Source={x:Static local:IoC.Settings}}"
+                                      IsChecked="{Binding NonRankSpecificSetBonusShuffle, Source={x:Static local:ViewModels.Settings}}"
                                       Margin="12, 4 0 0"
                                       ToolTip="Shuffles armour set bonuses across all ranks &#x0a;(Armour that didn't previous have a bonus won't be shuffled to have one)"
-                                      IsEnabled="{Binding ShuffleArmourSetBonus, Source={x:Static local:IoC.Settings}}"/>
+                                      IsEnabled="{Binding ShuffleArmourSetBonus, Source={x:Static local:ViewModels.Settings}}"/>
                     </StackPanel>
                 </Border>
             </Grid>
@@ -150,11 +150,11 @@
                             </Grid.RowDefinitions>
                             <StackPanel Margin="5 4">
                                 <CheckBox Content="Randomize Charm Skills"
-                                          IsChecked="{Binding RandomCharmSkill, Source={x:Static local:IoC.Settings}}"
+                                          IsChecked="{Binding RandomCharmSkill, Source={x:Static local:ViewModels.Settings}}"
                                           Margin="5, 4"
                                           ToolTip="Randomizes the skill charms give"/>
                                 <CheckBox Content="Randomize Charm Skill Levels"
-                                          IsChecked="{Binding RandomCharmSkillLevels, Source={x:Static local:IoC.Settings}}"
+                                          IsChecked="{Binding RandomCharmSkillLevels, Source={x:Static local:ViewModels.Settings}}"
                                           Margin="5, 4"
                                           ToolTip="Randomizes charm skills to have a random level &#x0a;(Skill level has bias for lower numbers)"/>
                             </StackPanel>
@@ -176,7 +176,7 @@
                             Margin="5">
                         <StackPanel Margin="0 5">
                             <CheckBox Content="Random Armour Icon Colour"
-                                      IsChecked="{Binding RandomArmourIconColour, Source={x:Static local:IoC.Settings}}"
+                                      IsChecked="{Binding RandomArmourIconColour, Source={x:Static local:ViewModels.Settings}}"
                                       Margin="5 4"
                                       VerticalAlignment="Bottom"
                                       ToolTip="Randomizes the colour of the armour icon &#x0a;(Done through randomizing rarity value, doesn't seem to have any negative effect, seems to just be a visual thing)"/>
@@ -201,16 +201,16 @@
                     Margin="5">
                 <StackPanel Margin="0 5">
                     <CheckBox Content="Random Amount of Decoration Slots"
-                                          IsChecked="{Binding RandomArmourDecoSlots, Source={x:Static local:IoC.Settings}}"
+                                          IsChecked="{Binding RandomArmourDecoSlots, Source={x:Static local:ViewModels.Settings}}"
                                           Margin="5, 4"
                                           ToolTip="Randomizes armour to have between 0-3 decoration slots &#x0a;(Chance of getting higher amount of slots increases as rarity increases eg. low rarity stuff will mostly be 0 and 1 slots while high rarity will mostly be 2 and 3 slots)&#x0a;(if don't check random slot size new slots will default to 1)"
                                           ToolTipService.ShowDuration="10000"/>
                     <CheckBox Content="Give Charms a Decoration Slot"
-                                          IsChecked="{Binding GiveCharmDecoSlot, Source={x:Static local:IoC.Settings}}"
+                                          IsChecked="{Binding GiveCharmDecoSlot, Source={x:Static local:ViewModels.Settings}}"
                                           Margin="5, 4"
                                           ToolTip="Gives Charms 1 decoration slots (1 is max amount can have on charm) &#x0a;(if don't check random slot size will default to size of 1)"/>
                     <CheckBox Content="Random Decoration Slot Size"
-                                          IsChecked="{Binding RandomDecoSlotSize, Source={x:Static local:IoC.Settings}}"
+                                          IsChecked="{Binding RandomDecoSlotSize, Source={x:Static local:ViewModels.Settings}}"
                                           Margin="5, 4"
                                           ToolTip="Randomizes all avaliable slot sizes between 1-4 on armour &#x0a;(Chance of getting bigger slots increases as rarity increases)"
                                           ToolTipService.ShowDuration="10000"/>
