--- a/MHW Randomizer/Windows/MainWindow.xaml
+++ b/MHW Randomizer/Windows/MainWindow.xaml
@@ -18,7 +18,7 @@
                 Height="50"
                 Margin="0 10 0 0"
                 Panel.ZIndex="1"
-                Visibility="{Binding Randomizing, Source={x:Static local:IoC.Randomizer}, 
+                Visibility="{Binding Randomizing, Source={x:Static local:ViewModels.Randomizer}, 
                              Converter={local:BooleanToVisibilityConverter}, ConverterParameter=true}">
             <Border.Effect>
                 <DropShadowEffect BlurRadius="10" ShadowDepth="3" Opacity="0.5"/>
@@ -34,7 +34,7 @@
         <DockPanel>
             <Grid DockPanel.Dock="Top"
                   Panel.ZIndex="1">
-                <Image Source="{Binding MonsterIcon, Source={x:Static local:IoC.Randomizer}}"
+                <Image Source="{Binding MonsterIcon, Source={x:Static local:ViewModels.Randomizer}}"
                        Height="100"
                        HorizontalAlignment="Left"
                        Margin="80 0 40 -10"/>
@@ -43,7 +43,7 @@
                         Width="165"
                         Height="20"
                         VerticalAlignment="Bottom"
-                        Command="{Binding RemoveFilesCommand, Source={x:Static local:IoC.Randomizer}}"/>
+                        Command="{Binding RemoveFilesCommand, Source={x:Static local:ViewModels.Randomizer}}"/>
                 <Border HorizontalAlignment="Right"
                         VerticalAlignment="Top"
                         Width="180"
@@ -51,22 +51,22 @@
                     <StackPanel Margin="0 4 4 4">
                         <Button Content="Open Chunk Folder" 
                                 Margin="3"
-                                IsEnabled="{Binding OpenFolderIsEnabled, Source={x:Static local:IoC.Randomizer}}"
-                                Command="{Binding OpenCommand, Source={x:Static local:IoC.Randomizer}}"/>
+                                IsEnabled="{Binding OpenFolderIsEnabled, Source={x:Static local:ViewModels.Randomizer}}"
+                                Command="{Binding OpenCommand, Source={x:Static local:ViewModels.Randomizer}}"/>
                         <Button Content="Randomize"
                                 Margin="3"
-                                IsEnabled="{Binding SaveIsEnabled, Source={x:Static local:IoC.Randomizer}}"
-                                Command="{Binding RandomizeCommand, Source={x:Static local:IoC.Randomizer}}"/>
+                                IsEnabled="{Binding SaveIsEnabled, Source={x:Static local:ViewModels.Randomizer}}"
+                                Command="{Binding RandomizeCommand, Source={x:Static local:ViewModels.Randomizer}}"/>
 
                         <TextBlock Text="Seed (Blank For Random Seed)" 
                                    FontSize="10"
                                    HorizontalAlignment="Center"/>
-                        <TextBox Text="{Binding UserSeed, Source={x:Static local:IoC.Settings}}"
+                        <TextBox Text="{Binding UserSeed, Source={x:Static local:ViewModels.Settings}}"
                                  Margin="3"/>
 
                         <Button Content="Credits"
                                 Margin="3 15 3 0"
-                                Command="{Binding CreditsCommand, Source={x:Static local:IoC.Randomizer}}"/>
+                                Command="{Binding CreditsCommand, Source={x:Static local:ViewModels.Randomizer}}"/>
                     </StackPanel>
                 </Border>
             </Grid>
